--- a/index.html
+++ b/index.html
@@ -1,8 +1,22 @@
-<html>
+<!DOCTYPE html>
+<html lang="pl">
     <head>
         <title>My webpage</title>
+        <link rel="stylesheet" href="assets/css/style.css">
     </head>
     <body>
-        <h1>Let's get started!</h1>
+        <header>Header</header>
+        <nav>
+            <ul class="nav">
+                <li><a href="#">Start</a></li>
+                <li><a href="#">Realizacje</a></li>
+                <li><a href="#">Kontakt</a></li>
+            </ul>
+        </nav>
+        <section>
+            <h1>Let's get started!</h1>
+            Content
+        </section>
+        <footer>Footer</footer>
     </body>
 </html>
