--- a/index.html
+++ b/index.html
@@ -1,22 +1,53 @@
 <!DOCTYPE html>
 <html lang="pl">
     <head>
-        <title>My webpage</title>
+        <title>Viarail sp. z o.o.</title>
         <link rel="stylesheet" href="assets/css/style.css">
     </head>
     <body>
-        <header>Header</header>
-        <nav>
-            <ul class="nav">
-                <li><a href="#">Start</a></li>
-                <li><a href="#">Realizacje</a></li>
-                <li><a href="#">Kontakt</a></li>
-            </ul>
-        </nav>
-        <section>
-            <h1>Let's get started!</h1>
-            Content
+        <div class="header">
+            <section id="logo"><img src="assets/img/logo.png" width="100px"></section>
+            <nav>
+                <ul class="nav">
+                    <li><a href="#o-nas">O nas</a></li>
+                    <li><a href="#realizacje">Realizacje</a></li>
+                    <li><a href="#referencje">Referencje</a></li>
+                    <li><a href="#footer">Kontakt</a></li>
+                </ul>
+            </nav>
+        </div>
+        <section id="section-center">
+
+            <section id="o-nas">
+                <h1>O nas</h1>
+                <p>Firma Viarail sp. z o.o. została założona w 2019 roku. Zajmujemy się w głównej mierze budownictwem kolejowym.</p>
+            </section>
+
+            <section id="realizacje">
+                <h1>Realizacje</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <img src="assets/img/via1.jpg" id="thumbnail">
+                <img src="assets/img/via2.jpg" id="thumbnail">
+            </section>
+            
+            <section id="referencje">
+                <h1>Referencje</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </section>
+
         </section>
-        <footer>Footer</footer>
+        <footer id="footer">
+            <p>
+                Viarail spółka z ograniczoną odpowiedzialnością<br>
+                al. Zwycięstwa 241/13<br>
+                81-521 Gdynia<br>
+            </p>
+            <p>
+                REGON: 387408936<br>
+                NIP: 5862361448<br>
+            </p>
+                <a href="mailto:viarailpolska@gmail.com">viarailpolska@gmail.com</a>
+            <p></p>
+        </footer>
     </body>
 </html>
